# vanet_world_simulator

./: .env.example  .gitignore  CMakeLists.txt  README.md
app/: main.cpp
config/: README.md  prototypes.yaml  scenario.yaml
core/: Engine.cpp  Engine.hpp  TickClock.cpp  TickClock.hpp
domain/: Client.hpp  PacketRecord.hpp  Prototype.hpp  ScenarioConstraints.hpp  Street.hpp  TrafficLight.hpp  TrafficLightNode.hpp  Types.hpp  Vehicle.hpp  VehicleMission.hpp  VehicleStateReport.hpp  WorldObject.hpp  WorldState.hpp
infrastructure/: ConfigLoader.cpp  ConfigLoader.hpp  CsvLogger.cpp  CsvLogger.hpp  README.md
services/: AlertService.cpp  AlertService.hpp  AssignmentService.cpp  AssignmentService.hpp  ClientHealthService.cpp  ClientHealthService.hpp  ClientRegistry.cpp  ClientRegistry.hpp  EventService.cpp  EventService.hpp  ExperimentLogService.cpp  ExperimentLogService.hpp  MissionProgressService.cpp  MissionProgressService.hpp  MobilityService.cpp  MobilityService.hpp  NeighborService.cpp  NeighborService.hpp  PacketLedgerService.cpp  PacketLedgerService.hpp  PacketService.cpp  PacketService.hpp  RadioService.cpp  RadioService.hpp  ReadinessService.cpp  ReadinessService.hpp  ScenarioConstraintService.cpp  ScenarioConstraintService.hpp  SessionLifecycleService.cpp  SessionLifecycleService.hpp  SpeedPolicyService.cpp  SpeedPolicyService.hpp  StateReportService.cpp  StateReportService.hpp  StateValidationService.cpp  StateValidationService.hpp  TrafficLightControlService.cpp  TrafficLightControlService.hpp  TrafficLightService.cpp  TrafficLightService.hpp  (+2 more)
tests/: .gitkeep  README.md
